--- a/src/app/components/user-accounts/create-user-accounts/create-user-accounts.component.html
+++ b/src/app/components/user-accounts/create-user-accounts/create-user-accounts.component.html
@@ -18,7 +18,7 @@
 
             <mat-form-field class="field" appearance="legacy" color="accent">
                 <mat-label>LAST NAME</mat-label>
-                <input (keydown.enter)="createUser()" class="upper-case" [formControl]="lastname" matInput autocomplete="off">
+                <input (keydown.enter)="createUser()" class="upper-case" appInputLetterOnly [formControl]="lastname" matInput autocomplete="off">
                 <mat-error *ngIf="lastname.errors?.required == true">Last Name is required</mat-error>
             </mat-form-field>
 
@@ -26,12 +26,14 @@
                 <mat-label>USER NAME</mat-label>
                 <input (keydown.enter)="createUser()" [formControl]="username" matInput autocomplete="off">
                 <mat-error *ngIf="username.errors?.required == true">User Name is required</mat-error>
+                <mat-error *ngIf="username.errors?.minlength">User Name must be at least 4 characters length</mat-error>
             </mat-form-field>
 
             <mat-form-field class="field" appearance="legacy" color="accent">
                 <mat-label>Enter your password</mat-label>
                 <input (keydown.enter)="createUser()" [formControl]="password" matInput [type]="passwordHide ? 'password' : 'text'">
                 <mat-error *ngIf="password.errors?.required == true">Password is required</mat-error>
+                <mat-error *ngIf="password.errors?.minlength">Password must be at least 4 characters length</mat-error>
                 <button mat-icon-button matSuffix (click)="passwordHide = !passwordHide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="passwordHide">
                   <mat-icon>{{passwordHide ? 'visibility_off' : 'visibility'}}</mat-icon>
                 </button>
