--- a/src/app/components/user-accounts/edit-user-accounts/edit-user-accounts.component.html
+++ b/src/app/components/user-accounts/edit-user-accounts/edit-user-accounts.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <div class="container">
+    <div class="container"  *ngIf="userAccountLoaded | async">
         <div class="title">
             <mat-icon>person</mat-icon>
             <label>User Accounts</label>
@@ -18,7 +18,7 @@
 
             <mat-form-field class="field" appearance="legacy" color="accent">
                 <mat-label>LAST NAME</mat-label>
-                <input (keydown.enter)="updateUser()" class="upper-case" [formControl]="lastname" matInput autocomplete="off">
+                <input (keydown.enter)="updateUser()" class="upper-case" appInputLetterOnly [formControl]="lastname" matInput autocomplete="off">
                 <mat-error *ngIf="lastname.errors?.required == true">Last Name is required</mat-error>
             </mat-form-field>
 
@@ -55,7 +55,7 @@
         </ng-template>
 
         <div class="actions">
-            <button mat-raised-button color="accent" (click)="updateUser()" [disabled]="!isFormValid()">Create</button>
+            <button mat-raised-button color="accent" (click)="updateUser()" [disabled]="!isFormValid()">Update</button>
         </div>
     </div>
 </div>
