--- a/src/app/components/user-accounts/user-accounts.component.html
+++ b/src/app/components/user-accounts/user-accounts.component.html
@@ -3,26 +3,44 @@
         <div class="title">
             <mat-icon>person</mat-icon>
             <label>User Accounts</label>
+            <!-- <button (click)="setActive()" mat-icon-button class="btn-close" *ngIf="(isArchived | async) == true">
+                <mat-icon>close</mat-icon>
+            </button> -->
         </div>
         <div class="actions">
             <ng-container *ngIf="adminLayoutService.view != 'mobile'; else elseTemplate">
                 <button [routerLink]="['/admin/user-accounts/create']" mat-raised-button class="btn-primary">ADD
                     USER</button>
-                <button mat-raised-button class="btn-archive">ARCHIVED</button>
+                <!-- <button mat-raised-button class="btn-archive" (click)="setArchived()">ARCHIVED</button> -->
+                <mat-checkbox (change)="toggleArchived()">Show Archived</mat-checkbox>
             </ng-container>
             <ng-template #elseTemplate>
                 <button [routerLink]="['/admin/user-accounts/create']" mat-icon-button class="btn-primary">
                     <mat-icon>add</mat-icon>
                 </button>
-                <button mat-icon-button class="btn-accent">
+                <!-- <button mat-icon-button class="btn-accent" (click)="setArchived()">
                     <mat-icon>archived</mat-icon>
-                </button>
+                </button> -->
             </ng-template>
             <mat-form-field appearance="legacy" class="search" color="accent">
                 <mat-label>Search</mat-label>
-                <input [formControl]="txtSearch" autocomplete="off" matInput (keydown.enter)="populateUserAccounts()">
+                <input [formControl]="txtSearch" autocomplete="off" matInput (keydown.enter)="search()">
                 <mat-icon style="margin-right: 5px;" matPrefix>search</mat-icon>
             </mat-form-field>
+            <!-- <ng-container *ngIf="(isArchived | async) == false; else archived">
+               
+            </ng-container>
+            <ng-template #archived>
+                <div class="archived">
+                    <mat-icon class="archived-icon">archived</mat-icon>
+                    <label>Archive</label>
+                    <mat-form-field appearance="legacy" class="search" color="accent">
+                        <mat-label>Search</mat-label>
+                        <input [formControl]="txtSearch" autocomplete="off" matInput (keydown.enter)="search()">
+                        <mat-icon style="margin-right: 5px;" matPrefix>search</mat-icon>
+                    </mat-form-field>
+                </div>
+            </ng-template> -->
         </div>
         <!-- <div class="table-list-container" [class.table-list-container-mobile]="adminLayoutService.view == 'mobile'"> -->
         <div class="table-list-container">
@@ -46,11 +64,29 @@
                     </ng-container>
                     <ng-container matColumnDef="username">
                         <th class="username" mat-header-cell *matHeaderCellDef> USERNAME </th>
-                        <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+                        <td mat-cell *matCellDef="let element">
+                            <div class="value">
+                                {{element.username}}
+                                <mat-icon *ngIf="element.isPasswordReset"
+                                    matTooltip="The password of this user account is resetted">restart_alt</mat-icon>
+                            </div>
+                        </td>
                     </ng-container>
                     <ng-container matColumnDef="status">
                         <th class="status" mat-header-cell *matHeaderCellDef> STATUS </th>
-                        <td class="status-value" mat-cell *matCellDef="let element"> {{element.status}} </td>
+                        <td class="status-value" mat-cell *matCellDef="let element">
+                            <!-- {{ element.status}}  -->
+                            <ng-container *ngIf="(isArchived | async) == false; else archivedStatus">
+                                ACTIVE
+                            </ng-container>
+                            <ng-template #archivedStatus>
+                                <div class="archived-status">
+                                    ARCHIVED
+                                </div>
+
+                            </ng-template>
+
+                        </td>
                     </ng-container>
                     <ng-container matColumnDef="date_created">
                         <th class="date-created" mat-header-cell *matHeaderCellDef> DATE CREATED </th>
@@ -60,20 +96,34 @@
                     <ng-container matColumnDef="actions">
                         <th mat-header-cell *matHeaderCellDef></th>
                         <td mat-cell *matCellDef="let element">
-                            <button mat-icon-button [matMenuTriggerFor]="menu"
-                                aria-label="Example icon-button with a menu">
-                                <mat-icon>more_vert</mat-icon>
-                            </button>
-                            <mat-menu #menu="matMenu">
-                                <button mat-menu-item [routerLink]="['/admin/user-accounts/edit', {user_id: element.id}]">
-                                    <mat-icon>edit</mat-icon>
-                                    <span>Edit</span>
+                            <ng-container *ngIf="(isArchived | async) == false; else archivedUsers">
+                                <button mat-icon-button [matMenuTriggerFor]="menu" matTooltip="Actions"
+                                    aria-label="Example icon-button with a menu">
+                                    <mat-icon>more_vert</mat-icon>
                                 </button>
-                                <button mat-menu-item>
-                                    <mat-icon>archive</mat-icon>
-                                    <span>Archive</span>
+                                <mat-menu #menu="matMenu">
+                                    <button mat-menu-item
+                                        [routerLink]="['/admin/user-accounts/edit', {user_id: element.id}]">
+                                        <mat-icon>edit</mat-icon>
+                                        <span>Edit</span>
+                                    </button>
+                                    <button mat-menu-item (click)="archiveUser(element.id, false, element)">
+                                        <mat-icon>archive</mat-icon>
+                                        <span>Archive</span>
+                                    </button>
+                                    <button mat-menu-item (click)="resetPassword(element.id, element)">
+                                        <mat-icon>restart_alt</mat-icon>
+                                        <span>Reset Password</span>
+                                    </button>
+                                </mat-menu>
+                            </ng-container>
+                            <ng-template #archivedUsers>
+                                <button matTooltip="Activate this user" mat-icon-button
+                                    (click)="archiveUser(element.id, true, element)">
+                                    <mat-icon>keyboard_return</mat-icon>
                                 </button>
-                            </mat-menu>
+                            </ng-template>
+
                         </td>
                     </ng-container>
                     <tr mat-header-row *matHeaderRowDef="displayedColumns;"></tr>
@@ -94,8 +144,8 @@
                     <div class="row" *ngFor="let list of displayedList">:</div>
                 </div>
                 <div class="col">
-                    <div class="row" *ngFor="let list of displayedList">
-                        {{list.value}}
+                    <div class="row" *ngFor="let list of dataSource.data">
+                        {{list.firstname}}
                         <div *ngIf="list.label == 'Actions'">
                             <button mat-icon-button>
                                 <mat-icon>edit</mat-icon>
