--- a/src/app/components/user-accounts/user-accounts.component.scss
+++ b/src/app/components/user-accounts/user-accounts.component.scss
@@ -34,6 +34,9 @@
                 color: $primary;
                 font-size: 18px;
             }
+            .btn-close {
+                margin-left: auto;
+            }
         }
 
         .actions {
@@ -53,6 +56,19 @@
             .search {
                 margin-left: auto;
                 margin-right: 20px;
+            }
+
+            .archived {
+                width: 100%;
+                padding-left: 20px;
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;
+                align-items: center;
+                gap: 5px;
+                .archived-icon {
+                    color: $primary;
+                }
             }
 
             @media only screen and (min-width: 200px) {
@@ -101,6 +117,15 @@
                     font-size: 12px;
                     font-weight: 100;
                     border-bottom: 1px solid gray;
+                    .value {
+                        width: 100%;
+                        height: 100%;
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: flex-start;
+                        align-items: center;
+                        gap: 2px;
+                    }
                 }
 
                 .id {
@@ -130,6 +155,9 @@
 
                 .status-value {
                     color: gray;
+                    .archived-status {
+                        color: $warn;
+                    }
                 }
 
                 .date-created {
