--- a/src/app/components/user-accounts/dialog-user-accounts/dialog-user-accounts.component.html
+++ b/src/app/components/user-accounts/dialog-user-accounts/dialog-user-accounts.component.html
@@ -1,51 +1,59 @@
-<ng-container class="confimation-dialog" *ngIf="data.action == 'createUserAccount'">
-    <h2 mat-dialog-title>Confirmation</h2>
-    <mat-dialog-content class="mat-typography">
-        Are you sure you want to create this user acccount?
-    </mat-dialog-content>
-    <mat-dialog-actions align="end">
+<div class="confirmation-dialog" *ngIf="data.action == 'createUserAccount'">
+    <mat-icon class="icon" [ngStyle]="{'color':'#303F9F'}">
+        help
+    </mat-icon>
+    <div class="question-no-1">{{data.question1}}</div>
+    <div class="question-no-2">{{data.question2}}</div>
+    <mat-dialog-actions>
+        <button class="btn-action-dialog btn-no" mat-raised-button mat-dialog-close>NO</button>
         <button [disabled]="(isCreatingUserAccount$ | async) || (errorCreateUserAccount)"
-            [class.spinner]="isCreatingUserAccount$ | async" mat-raised-button class="btn-primary" cdkFocusInitial
-            (click)="createUserAccount()">Create</button>
-        <button mat-raised-button mat-dialog-close>Cancel</button>
-    </mat-dialog-actions>
-</ng-container>
+            [class.spinner]="isCreatingUserAccount$ | async" mat-raised-button class="btn-action-dialog btn-primary"
+            cdkFocusInitial (click)="createUserAccount()">YES</button>
 
-<ng-container class="confimation-dialog" *ngIf="data.action == 'updateUserAccount'">
-    <h2 mat-dialog-title>Confirmation</h2>
-    <mat-dialog-content class="mat-typography">
-        Are you sure you want to update this user acccount?
-    </mat-dialog-content>
-    <mat-dialog-actions align="end">
-        <button [disabled]="isUpdatingUserAccount$ | async"
-            [class.spinner]="isUpdatingUserAccount$ | async" mat-raised-button class="btn-primary" cdkFocusInitial
-            (click)="updateUserAccount()">Update</button>
-        <button mat-raised-button mat-dialog-close>Cancel</button>
     </mat-dialog-actions>
-</ng-container>
+</div>
 
-<ng-container class="confimation-dialog" *ngIf="data.action == 'archiveUser'">
-    <h2 mat-dialog-title>Confirmation</h2>
-    <mat-dialog-content class="mat-typography">
-        {{data.question}}
-        <mat-divider></mat-divider>
-        <div class="user-details">
-            <div class="title">User Details</div>
-            <li>{{data.user.id}}</li>
-            <li>{{data.user.firstname}} {{data.user.lastname}}</li>
-            <li>{{data.user.role}}</li>
-        </div>
-    </mat-dialog-content>
-    <mat-dialog-actions align="end">
-        <button [disabled]="isArchivingUserAccount$ | async"
-            [class.spinner]="isArchivingUserAccount$ | async" mat-raised-button class="btn-primary" cdkFocusInitial
-            (click)="archiveUserAccount()">Archive</button>
-        <button mat-raised-button mat-dialog-close>Cancel</button>
+<div class="confirmation-dialog" *ngIf="data.action == 'updateUserAccount'">
+    <mat-icon class="icon" [ngStyle]="{'color':'#303F9F'}">
+        help
+    </mat-icon>
+    <div class="question-no-1">{{data.question1}}</div>
+    <div class="question-no-2">{{data.question2}}</div>
+    <mat-dialog-actions>
+        <button mat-raised-button mat-dialog-close class="btn-action-dialog btn-no">NO</button>
+        <button (click)="updateUserAccount()" [disabled]="isUpdatingUserAccount$ | async"
+            [class.spinner]="isUpdatingUserAccount$ | async" mat-raised-button class="btn-primary btn-action-dialog"
+            cdkFocusInitial>YES</button>
     </mat-dialog-actions>
-</ng-container>
+</div>
 
-<ng-container class="confimation-dialog" *ngIf="data.action == 'resetPassword'">
-    <h2 mat-dialog-title>Confirmation</h2>
+<div class="confirmation-dialog" *ngIf="data.action == 'archiveUser'">
+    <mat-icon class="icon" [ngStyle]="{'color':'#FFA000'}">
+        warning
+    </mat-icon>
+    <div class="question-no-1">{{data.question1}}</div>
+    <div class="question-no-2">{{data.question2}}</div>
+    <mat-dialog-actions>
+        <button mat-raised-button mat-dialog-close class="btn-action-dialog btn-no">NO</button>
+        <button [disabled]="isArchivingUserAccount$ | async" [class.spinner]="isArchivingUserAccount$ | async"
+            mat-raised-button class="btn-primary btn-action-dialog" cdkFocusInitial
+            (click)="archiveUserAccount()">YES</button>
+    </mat-dialog-actions>
+</div>
+
+<div class="confirmation-dialog" *ngIf="data.action == 'resetPassword'">
+    <mat-icon class="icon" [ngStyle]="{'color':'#FFA000'}">
+        warning
+    </mat-icon>
+    <div class="question-no-1">{{data.question1}}</div>
+    <div class="question-no-2">{{data.question2}}</div>
+    <mat-dialog-actions>
+        <button mat-raised-button mat-dialog-close class="btn-action-dialog btn-no">NO</button>
+        <button [disabled]="isPasswordResetting$ | async" [class.spinner]="isPasswordResetting$ | async"
+            mat-raised-button class="btn-primary btn-action-dialog" cdkFocusInitial (click)="resetPassword()">YES
+        </button>
+    </mat-dialog-actions>
+    <!-- <h2 mat-dialog-title>Confirmation</h2>
     <mat-dialog-content class="mat-typography">
         Are you sure you want to reset password this user acccount?
         <mat-divider></mat-divider>
@@ -57,10 +65,8 @@
         </div>
     </mat-dialog-content>
     <mat-dialog-actions align="end">
-        <button [disabled]="isPasswordResetting$ | async"
-            [class.spinner]="isPasswordResetting$ | async" mat-raised-button class="btn-primary" cdkFocusInitial
-            (click)="resetPassword()">Reset Password</button>
+        <button [disabled]="isPasswordResetting$ | async" [class.spinner]="isPasswordResetting$ | async"
+            mat-raised-button class="btn-primary" cdkFocusInitial (click)="resetPassword()">Reset Password</button>
         <button mat-raised-button mat-dialog-close>Cancel</button>
-    </mat-dialog-actions>
-</ng-container>
-
+    </mat-dialog-actions> -->
+</div>
