--- a/src/app/components/user-accounts/edit-user-accounts/edit-user-accounts.component.scss
+++ b/src/app/components/user-accounts/edit-user-accounts/edit-user-accounts.component.scss
@@ -1,5 +1,7 @@
 @import "../../../shared/scss/theme";
-
+::ng-deep .mat-checkbox-checked.mat-primary .mat-checkbox-background,.mat-checkbox-indeterminate.mat-primary .mat-checkbox-background {
+    background-color: $primary;
+}
 .wrapper {
     width: 100%;
     height: 100%;
