--- a/src/app/shared/scss/_theme.scss
+++ b/src/app/shared/scss/_theme.scss
@@ -15,8 +15,12 @@
 // }
 
 // $primary: #e91e63;
-$bgColor: #303030;
-$basic: #424242;
-$primary: #ea7e34;
+// $bgColor: #303030;
+$bgColor: #202327;
+// $basic: #424242;
+$basic: #282B30;
+$blink: #3c4047;
+// $primary: #ea7e34;
+$primary: #EA7E34;
 $accent: #607d8b;
 $warn: #f44336;
