--- a/src/app/components/user-accounts/user-accounts.component.html
+++ b/src/app/components/user-accounts/user-accounts.component.html
@@ -3,46 +3,19 @@
         <div class="title">
             <mat-icon>person</mat-icon>
             <label>User Accounts</label>
-            <!-- <button (click)="setActive()" mat-icon-button class="btn-close" *ngIf="(isArchived | async) == true">
-                <mat-icon>close</mat-icon>
-            </button> -->
         </div>
         <div class="actions">
-            <ng-container *ngIf="adminLayoutService.view != 'mobile'; else elseTemplate">
-                <button [routerLink]="['/admin/user-accounts/create']" mat-raised-button class="btn-primary">ADD
-                    USER</button>
-                <!-- <button mat-raised-button class="btn-archive" (click)="setArchived()">ARCHIVED</button> -->
-                <mat-checkbox (change)="toggleArchived()">Show Archived</mat-checkbox>
-            </ng-container>
-            <ng-template #elseTemplate>
-                <button [routerLink]="['/admin/user-accounts/create']" mat-icon-button class="btn-primary">
-                    <mat-icon>add</mat-icon>
-                </button>
-                <!-- <button mat-icon-button class="btn-accent" (click)="setArchived()">
-                    <mat-icon>archived</mat-icon>
-                </button> -->
-            </ng-template>
+            <button [routerLink]="['/admin/user-accounts/create']" mat-raised-button
+                class="btn-primary btn-component-action">ADD
+                USER</button>
+            <mat-checkbox (change)="toggleArchived()">Show Archived</mat-checkbox>
+
             <mat-form-field appearance="legacy" class="search" color="accent">
                 <mat-label>Search</mat-label>
                 <input [formControl]="txtSearch" autocomplete="off" matInput (keydown.enter)="search()">
                 <mat-icon style="margin-right: 5px;" matPrefix>search</mat-icon>
             </mat-form-field>
-            <!-- <ng-container *ngIf="(isArchived | async) == false; else archived">
-               
-            </ng-container>
-            <ng-template #archived>
-                <div class="archived">
-                    <mat-icon class="archived-icon">archived</mat-icon>
-                    <label>Archive</label>
-                    <mat-form-field appearance="legacy" class="search" color="accent">
-                        <mat-label>Search</mat-label>
-                        <input [formControl]="txtSearch" autocomplete="off" matInput (keydown.enter)="search()">
-                        <mat-icon style="margin-right: 5px;" matPrefix>search</mat-icon>
-                    </mat-form-field>
-                </div>
-            </ng-template> -->
         </div>
-        <!-- <div class="table-list-container" [class.table-list-container-mobile]="adminLayoutService.view == 'mobile'"> -->
         <div class="table-list-container">
             <div class="table-container">
                 <table mat-table [dataSource]="dataSource">
@@ -75,7 +48,6 @@
                     <ng-container matColumnDef="status">
                         <th class="status" mat-header-cell *matHeaderCellDef> STATUS </th>
                         <td class="status-value" mat-cell *matCellDef="let element">
-                            <!-- {{ element.status}}  -->
                             <ng-container *ngIf="(isArchived | async) == false; else archivedStatus">
                                 ACTIVE
                             </ng-container>
@@ -83,9 +55,7 @@
                                 <div class="archived-status">
                                     ARCHIVED
                                 </div>
-
                             </ng-template>
-
                         </td>
                     </ng-container>
                     <ng-container matColumnDef="date_created">
@@ -94,8 +64,8 @@
                         </td>
                     </ng-container>
                     <ng-container matColumnDef="actions">
-                        <th mat-header-cell *matHeaderCellDef></th>
-                        <td mat-cell *matCellDef="let element">
+                        <th mat-header-cell *matHeaderCellDef>ACTIONS</th>
+                        <td mat-cell *matCellDef="let element" class="action-row">
                             <ng-container *ngIf="(isArchived | async) == false; else archivedUsers">
                                 <button mat-icon-button [matMenuTriggerFor]="menu" matTooltip="Actions"
                                     aria-label="Example icon-button with a menu">
@@ -123,7 +93,6 @@
                                     <mat-icon>keyboard_return</mat-icon>
                                 </button>
                             </ng-template>
-
                         </td>
                     </ng-container>
                     <tr mat-header-row *matHeaderRowDef="displayedColumns;"></tr>
@@ -133,33 +102,11 @@
                     </tr>
                 </table>
             </div>
-            <!-- <div class="list-container" *ngIf="adminLayoutService.view == 'mobile'">
-                <div class="col">
-                    <div class="row" *ngFor="let list of displayedList">
-                        <mat-icon>{{list.icon}}</mat-icon>
-                        {{list.label}}
-                    </div>
-                </div>
-                <div class="divider-col">
-                    <div class="row" *ngFor="let list of displayedList">:</div>
-                </div>
-                <div class="col">
-                    <div class="row" *ngFor="let list of dataSource.data">
-                        {{list.firstname}}
-                        <div *ngIf="list.label == 'Actions'">
-                            <button mat-icon-button>
-                                <mat-icon>edit</mat-icon>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
         </div>
         <div class="paginator">
             <mat-paginator color="accent" [showFirstLastButtons]="true" [pageSizeOptions]="pageSizeOptions"
                 [pageSize]="limit | async" [length]="total | async" (page)="onChangePage($event)">
             </mat-paginator>
         </div>
-
     </div>
 </div>
