--- a/src/app/shared/scss/_dialog.scss
+++ b/src/app/shared/scss/_dialog.scss
@@ -1,3 +1,34 @@
 .confirmation-dialog {
-    width: 350;
+    // width: 350;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 15px 0px;
+    // background-color: #313338;
+    .icon {
+        transform: scale(2);
+        // margin-top: 15px;
+    }
+
+    .question-no-1 {
+        color: white;
+        margin: 20px 0px 0px;
+        letter-spacing: 1px;
+    }
+
+    .question-no-2 {
+        color: #1FB58F;
+        letter-spacing: 1px;
+    }
+
+    mat-dialog-actions {
+        gap: 10px;
+    }
+
+    button {
+        width: 100px;
+    }
 }
+
+
